fix: Fixed Problem with deployment repo files on update were ignored